--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <td>18</td>
                     <td>19</td>
                     <td>GBEANOU</td>
-                    <td>Eric</td>
+                    <td>Eric Raymondo Silete</td>
                     <td>ericgbeanou@gmail.com</td>
                 </tr>
                 <tr>
